# weatherFetcher

./: CMakeLists.txt  README.md
ascii-arts/: Atmosphere.txt  Clear.txt  Clouds.txt  Drizzle.txt  Rain.txt  Snow.txt  Thunderstorm.txt
src/: geolocation.h  main.cpp
